# iot-data-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_on_dev.sh
app/: Dockerfile  database.sql  engine_run.py  main.py  pyproject.toml  requirements.txt  run_engine.py
app/engine/: __init__.py  routes_config.py
app/engine/core/: routes.py
app/engine/core/database/: db_handler.py  db_model.py
app/engine/core/enums/: common.py  engine.py  http_status.py  thingspeaks.py
app/engine/core/lib/: engine_response.py  thingspeaks_response.py
app/engine/core/response/: engine_response.py  thingspeaks_response.py
app/engine/core/services/: engine_service.py  thingspeaks_service.py
apps/: main_engine.py
apps/engine/: __init__.py  routes_config.py
apps/engine/core/: routes.py
apps/engine/core/database/: db_handler.py  db_model.py
apps/engine/core/enums/: http_status.py  thingspeaks.py
apps/engine/core/lib/: engine_response.py  thingspeaks_response.py
apps/engine/core/services/: engine_service.py  thingspeaks_service.py
infraestructure/: 00-namespace.yaml  01-db-pv.yml  01-deployment-mysql.yaml  01-statefulset.yaml
