[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fbzavaleta <benjamin1992.1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
flask = "3.0.2"
sqlalchemy = "2.0.28"
mysql-connector-python = "8.3.0"
choicesenum = "0.7.0"
requests = "2.31.0"


[tool.poetry.scripts]
run-engine = "app.main:engine_app"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

