[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fbzavaleta <benjamin.zavaleta@crunchyroll.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
mysql-connector-python = "^8.3.0"
choicesenum = "^0.7.0"
requests = "^2.31.0"

[tool.poetry.scripts]
engine = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
